--- a/package.json
+++ b/package.json
@@ -3,9 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animejs": "^2.2.0",
+    "axios": "^0.18.0",
+    "dom-to-image": "^2.6.0",
+    "esri-leaflet": "^2.2.3",
+    "file-saver": "^2.0.0",
+    "leaflet": "^1.4.0",
+    "lodash": "^4.17.11",
     "react": "^16.6.3",
+    "react-arcgis": "^3.3.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-leaflet": "^2.2.0",
+    "react-scripts": "^2.1.3",
+    "react-transition-group": "^2.5.0",
+    "retina-dom-to-image": "^2.5.6",
+    "semantic-ui-react": "^0.84.0",
+    "tinycolor": "0.0.1",
+    "tinycolor2": "^1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
